Mac: Ensure we wait for the first frame for window-modal sheets.

AppKit runs its sheet animation in UI-thread blocking loop. There is no
way to swap in a frame from the compositor while it is running. So
failing to wait means we animate a blank window.

Fix by restoring the wait that regressed in r574771

Test=Bookmark Star -> More...: Ensure the window does not animate in blank.

Bug: 865331
Change-Id: Ifd87944e3ae0d3af5f5b7eb8569e9a7c98e1be0c
Reviewed-on: https://chromium-review.googlesource.com/1146136
Commit-Queue: ccameron <ccameron@chromium.org>
Reviewed-by: ccameron <ccameron@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577186}
Former-commit-id: 4d1f95c1b7779bb4a406d8e22ee0628139999aad